# pac-man

./: .flake8  .gitignore  Makefile  README.md  config.json  pac-man.py  pacman.spec  pyproject.toml
docs/project_management/: README.md  acceptance_test_plan.md  actual_progress_vs_timeline.md  blocking_points_and_conflicts.md  evidence_summary.md  git_activity_summary.md  kanban_tracking.md  project_analysis_and_choices.md  risk_analysis.md  team_organization.md  timeline.md
docs/project_management/evidence/: git-history-with-files.txt  git-history.txt  trello-pac-man.json
pacman/: __init__.py  config.json  config.py  highscores.py  main.py  resources.py
pacman/game/: ai.md  ai.py  entities.py  game.py  input.py  items.py  save.py  scene_manager.py  sprites.py  type_defs.py  ui.py
pacman/game/levels/: __init__.py  castor_wilds.py  cave.py  cave_of_flames.py  cloud_tops.py  dark_hyrule_castle.py  deepwood_shrine.py  enemy_factory.py  final_battle.py  fortress_winds.py  hyrule_field.py  level_base.py  minish_woods.py  mount_crenel.py  palace_of_winds.py  royal_valley.py  temple_of_droplets.py  vaati_battle.py  wind_ruins.py
pacman/game/scenes/: __init__.py  game_over.py  main_menu_scene.py  pause.py  play_scene.py  title_scene.py  true_ending.py  weird_ending.py  win_screen_base.py
typings/mazegenerator/: __init__.pyi  mazegenerator.pyi
typings/pygame/: __init__.pyi
